[package]
name = "html-tags"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/TheBotlyNoob/html-tags"
description = "An automated list of HTML tags with their attributes and values"
authors = ["Jay Jackson <jj@jj.is-a.dev>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
heck = "0.4.1"
scraper = "0.16.0"
ureq = "2.6.2"
