[package]
name = "html-tags"
version = "0.0.9"
edition = "2021"
repository = "https://github.com/fournii/html-tags"
description = "An automated list of HTML tags with their attributes and values"
authors = ["Jay Jackson <jj@jj.is-a.dev>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = []
