[package]
name = "html-tags"
version = "0.0.12"
edition = "2021"
repository = "https://github.com/fournii/html-tags"
description = "An automated list of HTML tags with their attributes and values"
authors = ["Jay Jackson <jj@jj.is-a.dev>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tendril = { version = "0.4.3", optional = true }

[features]
default = ["alloc", "tendril"]
alloc = []
tendril = ["dep:tendril", "alloc"]